garde_tests/tests/ui/compile-fail/no_validation.stderr
error: field has no validation, use `#[garde(skip)]` if this is intentional
 --> tests/ui/compile-fail/no_validation.rs:3:12
  |
3 |     field: u64,
  |            ^^^

error: field has no validation, use `#[garde(skip)]` if this is intentional
 --> tests/ui/compile-fail/no_validation.rs:7:14
  |
7 | struct Tuple(u64);
  |              ^^^

error: field has no validation, use `#[garde(skip)]` if this is intentional
  --> tests/ui/compile-fail/no_validation.rs:11:21
   |
11 |     Struct { field: u64 },
   |                     ^^^

error: field has no validation, use `#[garde(skip)]` if this is intentional
  --> tests/ui/compile-fail/no_validation.rs:12:11
   |
12 |     Tuple(u64),
   |           ^^^
